--- a/index.html
+++ b/index.html
@@ -400,6 +400,6 @@
       <script src="js/jquery.counterup.min.js"></script>
 
       <!-- Custom Js -->
-      <script src="js/custom.js"></script>
+      <!-- <script src="js/custom.js"></script> -->
     </body>
   </html>
