--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
 						</button>
 						<div class="navbar-brand">
 							<a href="index.html">
-								<img src="images/logo2.jpg" alt="logo">
+								<img src="images/logo2.JPG" alt="logo">
 							</a>
 						</div>
 					</div>
