--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 												<div class="col-sm-6 hidden-xs animation animated-item-4">
 														<div class="slider-img">
-																<img src="images/face.jpg" class="img-responsive">
+																<img src="images/vikas.jpg" class="img-responsive">
 														</div>
 												</div>
 
